# Notes_Bartoloni

./: CMakeLists.txt  Collection.cpp  Collection.h  Important.cpp  Important.h  Note.cpp  Note.h  Observer.h  README.md  Subject.h  View.cpp  View.h  main.cpp
Google_tests/: CMakeLists.txt  CollectionTest.cpp  ImportantTest.cpp  NoteTest.cpp  RunAllTests.cpp  ViewTest.cpp
Google_tests/lib/googletest/: CMakeLists.txt
Google_tests/lib/googletest/include/gtest/internal/: gtest-port.h
