cmake_minimum_required(VERSION 3.24)
project(Notes_Bartoloni)
add_subdirectory(Google_tests)
set(CMAKE_CXX_STANDARD 17)
set(SOURCE_FILES Note.cpp Note.h Collection.cpp Collection.h Observer.h Subject.h Important.cpp Important.h View.h View.cpp)
add_executable(Notes_Bartoloni main.cpp)
add_library(core ${SOURCE_FILES})
target_link_libraries(Notes_Bartoloni core)