cmake_minimum_required(VERSION 3.24)
project(Google_tests)
add_subdirectory(./lib/googletest)
set(gtest_SOURCE_DIR, ./lib/googletest)
include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
set(TEST_SOURCE_FILES CollectionTest.cpp RunAllTests.cpp NoteTest.cpp NoteTest.cpp ImportantTest.cpp)
add_executable(Google_Tests_run ${TEST_SOURCE_FILES})
target_link_libraries(Google_Tests_run gtest gtest_main core)
